crates/sui-prover/tests/snapshots/inv/inv.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
  ┌─ tests/inputs/inv/inv.ok.move:8:5
  │
8 │     }
  │     ^
  │
  =     at tests/inputs/inv/inv.ok.move:24: increment_spec
