crates/sui-prover/tests/snapshots/inv/inv_friend_visibility.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/inv/inv_friend_visibility.ok.move:14:1
   │
14 │ }
   │ ^
   │
   =     at tests/inputs/inv/inv_friend_visibility.ok.move:20: make_bad_spec
