crates/sui-prover/tests/snapshots/inv/inv_public_ensures.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/inv/inv_public_ensures.ok.move:14:1
   │
14 │ }
   │ ^
   │
   =     at tests/inputs/inv/inv_public_ensures.ok.move:24: make_bad_spec
